# ubreco

./: .gitignore  CMakeLists.txt  CMakePresets.json
ubreco/: CMakeLists.txt  test.C
ubreco/AllOutcomesReco/: CMakeLists.txt
ubreco/AllOutcomesReco/Modules/: CMakeLists.txt  NPFPFilter_module.cc
ubreco/BlipReco/: BlipAnaReader_module.cc  BlipAna_module.cc  BlipReco3D_module.cc  BlipRecoProducer_module.cc  BlipReco_module.cc  CMakeLists.txt  ParticleDump_module.cc  RawDigitSmoother_module.cc  TrackMasker_module.cc  blipana_config.fcl  blipreco_badchannels.txt  blipreco_configs.fcl  microboone_blipreco.fcl
ubreco/Clippy/: CMakeLists.txt  Clippy_module.cc  clippy_remcs.fcl
ubreco/CombinedReco/: CMakeLists.txt  EmptyFilter_module.cc  run_dropreco1products.fcl  run_wcpf_port_noreco1drop.fcl  run_wcpplus_port_noreco1drop.fcl
ubreco/DetachedVertexFinder/: CMakeLists.txt  DetachedVertexCore.fcl  DetachedVertexFinder_module.cc  classes.h  classes_def.xml  run_DetachedVertexFinder.fcl
ubreco/DetectorSystematics/: CMakeLists.txt  DummyRawDigitCreator_module.cc  HitVariationsAnalyzer_module.cc  WireModifier_module.cc  microboone_wiremod.fcl
ubreco/DopingReco/: .gitignore  CMakeLists.txt  DecayFinder.h  DecayFinder_module.cc  mem.db  time.db
ubreco/GammaCatcher/: CMakeLists.txt  CheckNeutrino_module.cc  ClusterTrackDistance_module.cc  Gamma3D_module.cc  Gamma_correlations_davidc_low_threshold_EVENT_TREE.ipynb  SelectNeutrino_module.cc  TruthStudies_module.cc  data_files.txt  gammacorrelation_module.cc  gammacorrelation_module.cc.bkp_Nov29  gammacorrelation_module.cc.oldVersion  problem_report  prodmarley_sn_gvkm_cosmic_uboone.fcl  runClusterTrackDistance.fcl  run_TruthStudies.fcl  run_cosmicremoval.fcl  run_gamma3d.fcl  run_gammacorrelation.fcl  run_proximityclustering.fcl
ubreco/MichelReco/: CMakeLists.txt  MichelRecoDriver_module.cc  run_michelrecodriver.fcl
ubreco/MicroBooNEPandora/: CMakeLists.txt  DummyVertexParticleCreationAlgorithm.cc  DummyVertexParticleCreationAlgorithm.h  MicroBooNEContent.cc  MicroBooNEContent.h  MicroBooNEDLContent.cc  MicroBooNEDLContent.h  MicroBooNEDLMasterAlgorithm.cc  MicroBooNEDLMasterAlgorithm.h  MicroBooNEExampleAlgorithm.cc  MicroBooNEExampleAlgorithm.h  MicroBooNEExternalVertexCreationAlgorithm.cc  MicroBooNEExternalVertexCreationAlgorithm.h  MicroBooNEMasterAlgorithm.cc  MicroBooNEMasterAlgorithm.h  MicroBooNEMvaVertexSelectionAlgorithm.cc  MicroBooNEMvaVertexSelectionAlgorithm.h  MicroBooNEMyDlVtxAlgorithm.cc  MicroBooNEMyDlVtxAlgorithm.h  MicroBooNEMyDlVtxFeatureTool.cc  MicroBooNEMyDlVtxFeatureTool.h  MicroBooNEPandora_module.cc  MicroBooNEPreProcessingAlgorithm.cc  MicroBooNEPreProcessingAlgorithm.h  MicroBooNETrainedVertexSelectionAlgorithm.cc  MicroBooNETrainedVertexSelectionAlgorithm.h  pandoramodules_microboone.fcl
ubreco/MuCS/: CMakeLists.txt  MuCSDT_module.cc  MuCSExtrapolate_module.cc  MuCSMCGen_module.cc  MuCSMCGen_module.fcl  MuCSMerger_module.cc  MuCSReader_module.cc  MuCSRecoToMC_module.cc  MuCSReco_module.cc  MuCSTrackTagger_module.cc  MuCSTrackTagger_module.fcl  prodMuCS_Cosmics_Muons.fcl  run_MuCSTrackTagger.fcl
ubreco/OpNoise/: CMakeLists.txt  OpNoiseCreateMask.fcl  OpNoiseCreateMask_module.cc  run_OpNoiseCreateMask.fcl
ubreco/PandoraEventBuildingFlashID/: AnalyzeFlashMatchChi2_module.cc  CMakeLists.txt  FilteredHitsProducerByPfp_module.cc  FilteredHitsProducer_module.cc  FilteredHitsTruthProducer_module.cc  FlashMatchingToolBase_tool.h  FlashMatchingTool_tool.cc  FlashNeutrinoId_tool.cc  FlashNeutrinoId_tool.h  MuCSFlashMatch_module.cc  NuSliceHitsProducerWithRecovery_module.cc  NuSliceReBuilderProducer_module.cc  PandoraEventAnalyser_module.cc  PhotonVis_module.cc  StoreFlashMatchChi2_module.cc  mem.db  run_mucsflashmatch.fcl  run_pfpana.fcl  time.db
ubreco/ShowerReco/: .gitignore  CMakeLists.txt  README.md  run_fullshowerreco.fcl  run_fullshowerreco_data_beamOff_numi.fcl  run_fullshowerreco_data_beamOn.fcl  run_fullshowerreco_data_beamOn_numi.fcl  run_fullshowerreco_data_double_pmt_beamOn.fcl  run_fullshowerreco_data_double_pmt_beamOn_numi.fcl  run_fullshowerreco_overlay.fcl  run_fullshowerreco_overlay_numi_sce.fcl  run_fullshowerreco_overlay_sce.fcl
ubreco/StopMu/: .nfs00000000b6a298ff00000088  CMakeLists.txt  StopMuMCFilter_module.cc  StopMuMCGen_module.cc  StopMuMCGen_module.fcl  StopMu_module.cc  ThroughMu_module.cc  filterStopMu_Single_Muons.fcl  prodStopMu_Single_Muons.fcl  prodgenie_bnb_nu_cosmics_reco2_slimmed.txt  run_stopmu.fcl  run_stopmu_mcc8.fcl  run_stopmu_mcc9_pandoracosmic.fcl  run_stopmu_mcc9_pandorakalman.fcl  run_throughmu.fcl  stopmu.fcl
ubreco/T0Reco/: #acpttrigLightStudies.fcl#  ACPTtrigLightStudies_module.cc  ACPTtrigMCFilter_module.cc  ACPTtrigMCGen_module.cc  ACPTtrigMCGen_module.fcl  ACPTtrig_module.cc  CMakeLists.txt  CosmicTaggingAnodeCathodePiercing_module.cc  T0RecoAnodeCathodePiercing.fcl  T0RecoAnodeCathodePiercingAna_module.cc  T0RecoAnodeCathodePiercingValidationAna_module.cc  T0RecoAnodeCathodePiercing_module.cc  acpttrig.fcl  run_CosmicTaggingAnodeCathodePiercing.fcl  run_T0RecoAnodeCathodePiercing.fcl  run_T0RecoAnodeCathodePiercingAna.fcl  run_T0RecoAnodeCathodePiercingDebugDATA.fcl  run_T0RecoAnodeCathodePiercingDebugMC.fcl  run_acpttrig.fcl  run_acpttrigLightStudies.fcl  run_acpttrigLightStudies_mc.fcl  run_acpttrigLightStudies_mc_2.fcl  run_acpttrig_nocrt.fcl  run_acpttrig_under20PE_v3.fcl
ubreco/UBFlashFinder/: CMakeLists.txt  FlashFinderFMWKInterface.cxx  OpHitCorrectionProducer_module.cc  PECalib.cxx  PECalib.h  TriggerValidation_module.cc  UBFlashFinder_module.cc  UBWCFlashFinder_module.cc  myOpFlashAna_module.cc  run_triggervalidation.fcl
ubreco/WcpPortedReco/: CMakeLists.txt
ubreco/mReA/: CMakeLists.txt  ElectronEvtHitProducer_module.cc  MCElectronProducer_module.cc  MuSampleFilter_module.cc  MuonRemoval_module.cc  NuRecoLArPandoraEventBuilding_module.cc  OneTrackFilter_module.cc
ubreco/mReAReco1/: CMakeLists.txt
ubreco/marley/: CMakeLists.txt  run_supernova.fcl  supernova_module.cc
ubreco/wcopreco/: CMakeLists.txt
(+700 files in other folders)
