add_subdirectory(MichelReco)
add_subdirectory(MicroBooNEPandora)
add_subdirectory(MuCS)
#add_subdirectory(PandoraEventBuildingFlashID)
add_subdirectory(T0Reco)
add_subdirectory(wcopreco)
add_subdirectory(UBFlashFinder)
add_subdirectory(ShowerReco)
add_subdirectory(LLSelectionTool)
add_subdirectory(StopMu)
add_subdirectory(OpNoise)
add_subdirectory(DetectorSystematics)
add_subdirectory(WcpPortedReco)
add_subdirectory(GammaCatcher)
#add_subdirectory(mReA)
