art_make( 
          # Needed for standalone c++ helper files
          LIB_LIBRARIES 

          # Needed for the main module          
          MODULE_LIBRARIES
                        larpandora_LArPandoraInterface
                        larcorealg_Geometry
                        larreco_RecoAlg
                        larcore_Geometry_Geometry_service
                        larsim_Simulation lardataobj_Simulation
                        lardataobj_RawData
                        lardataobj_RecoBase
                        lardataobj_AnalysisBase
			lardata_DetectorInfoServices
			lardataalg_DetectorInfo
                        lardata_Utilities
                        nusimdata_SimulationBase
                        ${ART_FRAMEWORK_CORE}
			            ${ART_FRAMEWORK_PRINCIPAL}
			            ${ART_FRAMEWORK_SERVICES_REGISTRY}
			            ${ART_FRAMEWORK_SERVICES_BASIC}
			            ${ART_FRAMEWORK_SERVICES_OPTIONAL}
			            ${ART_FRAMEWORK_SERVICES_OPTIONAL_TFILESERVICE_SERVICE}
			            art_Framework_Services_Registry
			            art_Persistency_Common
			            art_Persistency_Provenance
			            art_Utilities
                        canvas
			            ${MF_MESSAGELOGGER}
	                    ${FHICLCPP}
			            cetlib cetlib_except
                        ${Boost_SYSTEM_LIBRARY}
                        ${ROOT_BASIC_LIB_LIST}
          )

add_subdirectory(job)

install_headers()
install_source()
install_fhicl()
