add_subdirectory(TwoDimTools)
add_subdirectory(ShowerReco3D)
add_subdirectory(ClusterMerging)
add_subdirectory(ProximityClustering)
add_subdirectory(ReCluster)
add_subdirectory(Pi0Ana)
add_subdirectory(TruthFilters)
add_subdirectory(ShowerHitFilter)

install_fhicl()
install_headers()
install_source()

